--- a/hamburgueseria.html
+++ b/hamburgueseria.html
@@ -304,11 +304,11 @@ summary {
                 <p>Hamburguesa - 5.00€</p>
             </div>
             <div class="producto">
-                <img src="imagenes/perrito.png" alt="Perrito Caliente">
+                <img src="imagenes/perrito.png" alt="Perrito Caliente" onclick="agregarcesta('Perrito Caliente',3.50)">
                 <p>Perrito Caliente - 3.50€</p>
             </div>
             <div class="producto">
-                <img src="imagenes/bocadillo.png" alt="Bocadillo">
+                <img src="imagenes/bocadillo.png" alt="Bocadillo" onclick="agregarcesta('Bocadillo',4.00)">
                 <p>Bocadillo - <br>4.00€</p>
             </div>
         </div>
@@ -324,11 +324,11 @@ summary {
                 <p>Patatas Fritas - 2.00€</p>
             </div>
             <div class="producto">
-                <img src="imagenes/ensalada.png" alt="Ensalada">
+                <img src="imagenes/ensalada.png" alt="Ensalada" onclick="agregarcesta('Ensalada',1.50)">
                 <p>Ensalada - 1.50€</p>
             </div>
             <div class="producto">
-                <img src="imagenes/aros.png" alt="Aros de Cebolla">
+                <img src="imagenes/aros.png" alt="Aros de Cebolla" onclick="agregarcesta('Aros',2.50)">
                 <p>Aros de Cebolla - 2.50€</p>
             </div>
         </div>
@@ -337,15 +337,15 @@ summary {
                 <h3>Bebidas:</h3>
         <div class="productos">
             <div class="producto">
-                <img src="imagenes/agua.png" alt="Agua">
+                <img src="imagenes/agua.png" alt="Agua" onclick="agregarcesta('Agua', 1.00)">
                 <p>Agua - 1.00€</p>
             </div>
             <div class="producto">
-                <img src="imagenes/refresco.png" alt="Refresco">
+                <img src="imagenes/refresco.png" alt="Refresco" onclick="agregarcesta('Refresco', 1.50)">
                 <p>Refresco - 1.50€</p>
             </div>
             <div class="producto">
-                <img src="imagenes/cerveza.png" alt="Cerveza sin alcohol">
+                <img src="imagenes/cerveza.png" alt="Cerveza sin alcohol" onclick="agregarcesta('Cerveza 0%', 2.00)">
                 <p>Cerveza sin alcohol - 2.00€</p>
     </div>
 </div>
