total a pagar vuelve a 0

--- a/hamburgueseria.html
+++ b/hamburgueseria.html
@@ -183,6 +183,7 @@ summary {
             let numeroPedido= contador
 
                 // Edu: Para Vaciar la cesta y el total a pagar una vez presionado el boton de añadir pedido
+            total= 0
             document.getElementById("total").innerHTML = '0,00 €'
             productos = {};
             actualizarCarrito();
