--- a/hamburgueseria.html
+++ b/hamburgueseria.html
@@ -257,6 +257,7 @@ summary {
 
                 if(tiempoRestante <=0){
                     clearInterval(actualizarPedido)
+                    nuevoPedido.textContent = `Pedido ${numeroPedido}. Tiempo restante: RETRASO de ${tiempoTotal - tiempoVeUsuario} segundos`
                 }
             }, 1000);
 
