ahora si la cesta está vacía no deja hacer pedido

--- a/hamburgueseria.html
+++ b/hamburgueseria.html
@@ -219,6 +219,10 @@ details .adicionales {
 
             // Función para añadir un pedido a la zona de display
         function añadirPedido(){
+            if (total==0){
+                return
+            }
+            
             contador +=1
             let numeroPedido= contador
             desmarcarTodosLosComplementos()
